--- a/Code/Router/router_input.mcflurry.complex.swift.liquid
+++ b/Code/Router/router_input.mcflurry.complex.swift.liquid
@@ -4,7 +4,7 @@ import Foundation
 
 protocol {{ prefix }}{{ module_info.name }}RouterInput: AnyObject {
 
-    func createEmbeddableModule(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, lazyAllocation: Bool) -> {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock
+    func createEmbeddableModule(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, lazyAllocation: Bool) -> (embedder: {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock, updater: () -> {{ prefix }}{{ module_info.name }}EmbeddableUpdaterBlock)
 
     /*  // Example
     func dismiss()
