--- a/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
@@ -121,6 +121,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UIColl
     }
 
     private func setupConsumer() {
+        //consumer.equalityChecker = { $0 == $1 }
         consumer.delegate = collectionView
     }
 
