--- a/Code/View/view_controller.complex.root_collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.root_collectionview.cachetracker.swift.liquid
@@ -120,6 +120,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
     }
 
     private func setupConsumer() {
+        //consumer.equalityChecker = { $0 == $1 }
         consumer.delegate = self
     }
 
