--- a/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
@@ -98,6 +98,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     }
 
     private func setupConsumer() {
+        //consumer.equalityChecker = { $0 == $1 }
         consumer.delegate = self
     }
 
