--- a/Code/Presenter/presenter.mcflurry.complex.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.complex.cachetracker.swift.liquid
@@ -73,6 +73,12 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
         {% else %}interactor.configure(){% endif %}
     }
 
+    {% if custom_parameters.extended_configure %}//func update(_ model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
+    //    guard model != self.config.model else { return }
+    //    self.config = .init(services: self.config.services, model: model)
+    //    // TODO
+    //}{% endif %}
+
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
 
     func modelsListDidReset(_ initialState: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
@@ -94,8 +100,8 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
             // we use CacheTrackerPlainRecurrentConsumer, so we
             // have to associate embeddable module only for insertions
             case .insert:
-                let embedder = router.createEmbeddableModule(with: item.model!, lazyAllocation: false)
-                let newModel = {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel(model: item.model!, embed: embedder)
+                let module = router.createEmbeddableModule(with: item.model!, lazyAllocation: false)
+                let newModel = {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel(model: item.model!, embed: module.embedder, updater: module.updater)
                 result.append(CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>(model: newModel, index: item.index, newIndex: item.newIndex, type: item.type))
 
             default:
