--- a/Code/Presenter/presenter.mcflurry.embed.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.embed.swift.liquid
@@ -61,6 +61,12 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
         {% else %}interactor.configure(){% endif %}
     }
 
+    {% if custom_parameters.extended_configure %}//func update(_ model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
+    //    guard model != self.config.model else { return }
+    //    self.config = .init(services: self.config.services, model: model)
+    //    // TODO
+    //}{% endif %}
+
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
     // TODO: Place your code here
 
