--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -53,6 +53,12 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
         {% else %}interactor.configure(){% endif %}
     }
 
+    {% if custom_parameters.extended_configure %}//func update(_ model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
+    //    guard model != self.config.model else { return }
+    //    self.config = .init(services: self.config.services, model: model)
+    //    // TODO
+    //}{% endif %}
+
     func setOutput(_ output: {{ prefix }}{{ module_info.name }}ModuleOutput) {
         self.output = output
     }
