--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -7,13 +7,13 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     // MARK: - VIPER Vars
 
-    weak var output: {{ prefix }}{{ module_info.name }}InteractorOutput!
+    weak var output: {{ prefix }}{{ module_info.name }}InteractorOutput?
 
     // MARK: - Vars
 
     private var cacheTracker: CoreDataCacheTracker<{{ prefix }}{{ module_info.name }}ModuleDatabaseModel, {{ prefix }}{{ module_info.name }}ModuleEntityModel>?
     private var changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>] = [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]()
-    {% if custom_parameters.extended_configure %}private var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!{% endif %}
+    {% if custom_parameters.extended_configure %}private var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig?{% endif %}
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
