--- a/Code/Router/router.mcflurry.tabbar.swift.liquid
+++ b/Code/Router/router.mcflurry.tabbar.swift.liquid
@@ -81,9 +81,7 @@ class {{ prefix }}{{ module_info.name }}Router: NSObject, {{ prefix }}{{ module_
             UIApplication.shared.findTopViewController { topController in
 
                 guard let topController = topController, topController === self.transitionHandler else { 
-                    return DispatchQueue.main.asyncAfter(deadline: .now() + 0.05, execute: {
-                        return
-                    })
+                    return DispatchQueue.main.asyncAfter(deadline: .now() + 0.05, execute: run)
                 }
     
                 {% if custom_parameters.mcflurry_swift == 'true' %}
