--- a/Code/Presenter/module_output.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/module_output.mcflurry.alert.swift.liquid
@@ -1,10 +1,9 @@
 {% include 'header' %}
 
 import ViperMcFlurryX_Swift
-
 @MainActor
 protocol {{ prefix }}{{ module_info.name }}ModuleOutput: ViperModuleOutput {
-    func {{ prefix | downcase }}{{ module_info.name | downcase }}ModuleDidDismiss(_ module: {{ prefix }}{{ module_info.name }}ModuleInput)
+func {{ prefix | downcase }}{{ module_info.name | downcase }}ModuleDidDismiss(_ module: {{ prefix }}{{ module_info.name }}ModuleInput)
 }
 
 // Can be used in:
@@ -16,8 +15,7 @@ protocol {{ prefix }}{{ module_info.name }}ModuleOutput: ViperModuleOutput {
 //}
 
 class {{ prefix }}{{ module_info.name }}ModuleDismissCompletion: {{ prefix }}{{ module_info.name }}ModuleOutput {
-
-    private let completion: (@MainActor () -> Void)
+private let completion: (@MainActor () -> Void)
     private var selfRef: AnyObject?
 
     init(_ completion: @escaping (@MainActor () -> Void)) {
@@ -26,6 +24,10 @@ class {{ prefix }}{{ module_info.name }}ModuleDismissCompletion: {{ prefix }}{{ 
     }
 
     func {{ prefix | downcase }}{{ module_info.name | downcase }}ModuleDidDismiss(_ module: {{ prefix }}{{ module_info.name }}ModuleInput) {
+        complete()
+    }
+
+    private func complete() {
         self.completion()
         self.selfRef = nil
     }
