--- a/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
@@ -1,9 +1,8 @@
 {% include 'header' %}
 
 import UIKit
-
 class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
-
+    
     static let cellIdentifier = "Default"
 
     // MARK: - Outlets
@@ -92,7 +91,7 @@ import SwiftUI
 fileprivate class {{ prefix }}{{ module_info.name }}ViewControllerCell: UIViewController {
     override func viewDidLoad() {
         super.viewDidLoad()
-        let cell = {{ prefix }}{{ module_info.name }}ViewCell(style: .default, reuseIdentifier: "Default")
+        let cell = {{ prefix }}{{ module_info.name }}ViewCell(style: .default, reuseIdentifier: {{ prefix }}{{ module_info.name }}ViewCell.cellIdentifier)
         cell.autoresizingMask = [.flexibleWidth, .flexibleTopMargin, .flexibleBottomMargin]
         cell.bounds = .init(origin: .zero, size: .init(width: view.bounds.size.width, height: 44))
         cell.center = .init(x: view.bounds.midX, y: view.bounds.midY)
@@ -102,7 +101,6 @@ fileprivate class {{ prefix }}{{ module_info.name }}ViewControllerCell: UIViewCo
 
 fileprivate struct {{ prefix }}{{ module_info.name }}ViewControllerCellContainerView: UIViewControllerRepresentable {
     typealias UIViewControllerType = {{ prefix }}{{ module_info.name }}ViewControllerCell
-
     func makeUIViewController(context: Context) -> UIViewControllerType {
         return {{ prefix }}{{ module_info.name }}ViewControllerCell()
     }
