--- a/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
@@ -82,7 +82,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UIColl
     }
 
     func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
-        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "Default", for: indexPath) as! {{ prefix }}{{ module_info.name }}ViewCell
+        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: {{ prefix }}{{ module_info.name }}ViewCell.cellIdentifier, for: indexPath) as! {{ prefix }}{{ module_info.name }}ViewCell
         let item = consumer.object(at: indexPath.row)
         cell.configure(with: item.model, in: context)
         return cell
