--- a/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.root_tableview.cachetracker.swift.liquid
@@ -60,7 +60,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     }
 
     override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
-        let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
+        let cell = tableView.dequeueReusableCell(withIdentifier: {{ prefix }}{{ module_info.name }}ViewCell.cellIdentifier) as! {{ prefix }}{{ module_info.name }}ViewCell
         let model = consumer.object(at: indexPath.row)
         cell.configure(with: model, in: context)
         return cell
