--- a/Code/View/view_controller.root_tableview.swift.liquid
+++ b/Code/View/view_controller.root_tableview.swift.liquid
@@ -46,7 +46,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {
     }
 
     override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
-        let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
+        let cell = tableView.dequeueReusableCell(withIdentifier: {{ prefix }}{{ module_info.name }}ViewCell.cellIdentifier) as! {{ prefix }}{{ module_info.name }}ViewCell
         let model = models[indexPath.item]
         cell.configure(with: model, in: context)
         return cell
