--- a/Code/View/view_controller.complex.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.tableview.cachetracker.swift.liquid
@@ -108,6 +108,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
         self.tableView = tableView
         tableView.delegate = self
         tableView.dataSource = self
+        view.addSubview(tableView)
     }
 
 }
